<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".autenticazione.ConosciamociActivity" android:background="@color/white">

    <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="60dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/linearLayout" android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp">
        <ImageView
            android:src="@drawable/linietta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/imageView6" android:layout_weight="2"/>
        <ImageView
            android:src="@drawable/linietta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/imageView9" android:layout_weight="2"/>
        <ImageView
            android:src="@drawable/linietta_grigia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/imageView17" android:layout_weight="2"/>
        <ImageView
            android:src="@drawable/linietta_grigia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/imageView18" android:layout_weight="2"/>
    </LinearLayout>

    <Button
            android:text="NEXT"
            android:layout_width="225dp"
            android:layout_height="65dp" android:id="@+id/bt_AvantiDati"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp" android:background="@drawable/animazione_1" android:textSize="25sp"
            android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="30dp"
        android:text="Personal data"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/tE_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/input_bg_blue"
        android:gravity="center"
        android:hint="First name"
        android:textColorHint="@color/grey_primary"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tE_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/tE_surname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/input_bg_blue"
        android:gravity="center"
        android:hint="Last name"
        android:textColorHint="@color/grey_primary"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_AvantiDati"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:id="@+id/linearLayout3"
        android:background="@drawable/input_bg_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/tE_name"
        android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp">
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="Date of birth:"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="286dp" />

        <TextView
            android:id="@+id/tv_dataNascita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawableStart="@drawable/ic_calendar"
            android:gravity="center"
            android:text="Select date"
            android:textAlignment="center"
            android:textColor="@color/grey_primary"
            android:textSize="20sp"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="212dp"
            tools:layout_editor_absoluteY="284dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>