<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".autenticazione.RegisterActivity"
        android:background="@color/white">

    <TextView
        android:id="@+id/TitleReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:text="PERFECT! We're at the final stage"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="116dp"
        android:layout_height="102dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
        app:srcCompat="@drawable/logo_no_background" />

    <EditText
        android:id="@+id/InputEmail"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/input_bg_blue"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleReg" />

    <EditText
        android:id="@+id/InputCorrectPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/input_bg_blue"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@mipmap/baseline_password_white_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Confirm password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="or"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintTop_toBottomOf="@+id/InputCorrectPassword"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/input_bg_blue"
        android:ems="10"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputCorrectPassword" />

    <EditText
        android:id="@+id/InputPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/input_bg_blue"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@mipmap/baseline_password_white_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputEmail" />

    <Button
            android:text="Register"
            android:layout_width="225dp"
            android:layout_height="65dp" android:id="@+id/btnRegister"
            app:layout_constraintEnd_toEndOf="@+id/InputCorrectPassword"
            app:layout_constraintStart_toStartOf="@+id/InputCorrectPassword"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold" android:fontFamily="sans-serif" android:background="@drawable/animazione_1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp"
            app:layout_constraintTop_toBottomOf="@+id/InputCorrectPassword" app:layout_constraintVertical_bias="1.0"/>
    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/linearLayout11"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp" android:layout_marginStart="30dp" android:layout_marginEnd="30dp">
        <ImageView
            android:src="@drawable/linietta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/imageView6" android:layout_weight="2"/>

        <ImageView
            android:src="@drawable/linietta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/imageView9" android:layout_weight="2"/>
        <ImageView
            android:src="@drawable/linietta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/imageView17" android:layout_weight="2"/>
        <ImageView
            android:src="@drawable/linietta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/imageView18" android:layout_weight="2"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/progress_bg_orange"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:layout_constraintVertical_bias="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>