<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".autenticazione.InizioActivity"
        app:layoutDescription="@xml/activity_inizio_scene">
    <VideoView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/videoView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        android:scaleX="1.4"
        android:scaleY="1.5"
        android:background="@color/black_overlay"/>
    <Button
            android:text="LOGIN"
            android:layout_width="245dp"
            android:layout_height="65dp" android:id="@+id/btAccesso"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="28sp"
            android:textStyle="bold" android:textAlignment="center" android:textAppearance="@style/EditTextyTextViews"
            android:fontFamily="sans-serif-medium"
             android:textColor="#FFFFFF"
            android:background="@drawable/animazione_2" android:layout_marginBottom="15dp"/>
    <Button
            android:text="SIGN UP"
            android:layout_width="245dp"
            android:layout_height="65dp" android:id="@+id/btInizia"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/animazione_1" android:textStyle="bold|italic"
            android:textColor="@color/white" android:textSize="28sp"
            android:textAppearance="@style/Sub_Sub_Titulos"
            android:fontFamily="sans-serif"
            app:layout_constraintBottom_toTopOf="@+id/btAccesso"
            android:layout_marginBottom="20dp"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="241dp"
        android:layout_height="235dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_no_background"
        app:layout_constraintBottom_toTopOf="@+id/imageView70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/videoView"
        app:layout_constraintVertical_bias="0.15" />

    <ImageView
        android:id="@+id/imageView70"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:layout_marginBottom="284dp"
        app:layout_constraintBottom_toTopOf="@+id/btInizia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_scritta_pane" />

    <ProgressBar
        android:id="@+id/ProgressBar01"
        style="?android:attr/progressBarStyle"
        android:layout_width="67dp"
        android:layout_height="68dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="44dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bg_white"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/btInizia"
        app:layout_constraintEnd_toEndOf="@+id/videoView"
        app:layout_constraintStart_toStartOf="@+id/videoView" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>