<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".autenticazione.ConosciamociActivity"
        android:background="@color/white">
    <TextView
            android:text="Are you a man or a woman?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="40sp" android:textStyle="bold|italic" android:textAlignment="center"
            android:textColor="@color/black" android:textAllCaps="false" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toTopOf="@+id/GruppoRadio_Sesso" app:layout_constraintVertical_bias="0.0"
            android:layout_marginBottom="80dp"/>
    <Button
            android:text="NEXT"
            android:layout_width="225dp"
            android:layout_height="65dp" android:id="@+id/bt_AvantiSesso"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAlignment="center" android:textStyle="bold" android:background="@drawable/animazione_1"
            android:textSize="25sp" android:layout_marginBottom="50dp" android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

    <RadioGroup
        android:id="@+id/GruppoRadio_Sesso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="132dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_AvantiSesso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rB_uomo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/input_bg_blue"
            android:text="Man"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rB_donna"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/input_bg_blue"
            android:text="Woman"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="202dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liniette">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo_no_background" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Let's start!"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="60dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/liniette" android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp" android:layout_marginBottom="30dp">
        <ImageView
                android:src="@drawable/linietta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/imageView6" android:layout_weight="2"/>

        <ImageView
                android:src="@drawable/linietta_grigia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/imageView9" android:layout_weight="2"/>
        <ImageView
                android:src="@drawable/linietta_grigia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/imageView17" android:layout_weight="2"/>
        <ImageView
                android:src="@drawable/linietta_grigia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/imageView18" android:layout_weight="2"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>